1.5.0
    o add unit tests
    o no import of subjectProfileTheme, getNLinesYGgplot
1.4.3
    o change default palette for Windows support: u25C0 -> u25C4, u25B6 -> u25BA, u271A -> +, u2605 (star) -> u2666 (diamond), u25EF -> u25CB
1.4.2
    o subjectProfile[Interval|Event|Line]Plot: fix extraction size legend, add space between legend lines 
1.4.1
    o fix unit tests
1.4.0
    o add unit tests figures
    o filterData/subjectProfile[X]Plot/createSubjectProfileReport: new subsetSample parameter
1.3.0
	  o change imports of color palette from 'glpgUtilityFct' to 'glpgStyle'
	  o createSubjectProfileReport: test if input list is empty
1.2.0
    o add vignette with standard patient profiles for SDTM data
    o prepareSubjectProfile: fix in case trans and all missing values for interval plot
    o subjectProfileLinePlot: fix for orientation of paramNameVar labels in ggplot2 >= 3.0.0
    o fix bug when Rmd created after createSubjectProfileReport
    o getGLPGShapePalettePatientProfile: fix mix Unicode and ggplot2 palettes (asText = TRUE)
1.1.0
    o formatParamVar -> formatVarForPlotLabel/formatLongLabel: moved to glpgUtilityFct
1.0.0
    o change default time imputation in subjectProfileIntervalPlot (see 'timeImpType' parameter)
    o getXLimSubjectProfilePlots: fixes for empty interval plot
0.12.1
    o formatParamVar: fix message issue grouping
    o subjectProfileTextPlot: fix panel grid ggplot2 >= 3.3.0
0.12.0
    o checkTimeTrans: fix in case all cont module have the same transf
    o subjectProfileLinePlot: shapeSize, paramNameVar can be multiple
    o createSubjectProfileReport: exportBatchSize, subjectSort[] used also for order export of patient profiles, subjectSortDecreasing
0.11.0
    o subjectProfileLinePlot: yLimFrom new parameter
0.10.0
    o legend: fix when number of levels in aes var higher that represented levels
    o subjectProfile[Interval|Line|Event]Plot: alpha parameter
    o createSubjectProfileReport: suppress warnings Sweave